--- a/views/student_list.ejs
+++ b/views/student_list.ejs
@@ -1,71 +1,60 @@
 
-<div class="container-fluid" style="margin-top:100px">
+<div class="container-fluid" style="margin-top:100px" id="students-list">
     <h1> Students List</h1>
     <div class="list-group">
-        <button type="button" class="list-group-item list-group-item-action active">
-            Cras justo odio
-        </button>
-        <button type="button" class="list-group-item list-group-item-action">Dapibus ac facilisis in</button>
-        <button type="button" class="list-group-item list-group-item-action">Morbi leo risus</button>
-        <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
-        <button type="button" class="list-group-item list-group-item-action" disabled>Vestibulum at eros</button>
-        <button type="button" class="list-group-item list-group-item-action" disabled>Vestibulum at eros</button>
-        <button type="button" class="list-group-item list-group-item-action" disabled>Vestibulum at eros</button>
-        <button type="button" class="list-group-item list-group-item-action" disabled>Vestibulum at eros</button>
-        <button type="button" class="list-group-item list-group-item-action" disabled>Vestibulum at eros</button>
-        <button type="button" class="list-group-item list-group-item-action" disabled>Vestibulum at eros</button>
-        <button type="button" class="list-group-item list-group-item-action" disabled>Vestibulum at eros</button>
+        <% for(student in studentData){ %>
+            <button type="button" class="list-group-item list-group-item-action">
+                <%= student %>
+            </button>    
+        <% } %>
+        
     </div>
 </div>
 <!-- this is the add student form which will be hidden intially  -->
 <div id="add_student_form" class="container">
     <h2>Add Student Details: </h2>
     <div class="row">
-        <form>
+        <form action="./student/add-student" method="">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputEmail4">Email</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                    <input type="email" class="form-control" name="email" id="inputEmail4" placeholder="Email" required>
                 </div>
             </div>
             <div class="form-group">
+                <label for="name">Name of Student</label>
+                <input type="text" class="form-control" id="name" name="name" required>
+            </div>
+            <div class="form-group">
                 <label for="inputAddress">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" name="address" required>
             </div>
             <div class="form-group">
                 <label for="inputBatch">Batch</label>
-                <input type="text" class="form-control" id="inputBatch" placeholder="Batch Eg.2022,2021..">
+                <input type="text" class="form-control" id="inputBatch" placeholder="Batch Eg.2022,2021.." name="batch" required>
             </div>
             <div class="form-group">
                 <label for="College">College</label>
-                <input type="text" class="form-control" id="College" placeholder="Batch Eg.2022,2021..">
+                <input type="text" class="form-control" id="College" placeholder="ABC University" name="college" required>
             </div>
             <h6>Course Scores: </h6>
             <div class="container">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="score1">DSA Final Score:</label>
-                        <input type="number" class="form-control" id="score1">
+                        <input type="number" class="form-control" id="score1" name="dsa_score" required>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="score2">WebD Final Score:</label>
-                        <input type="number" class="form-control" id="score2">
+                        <input type="number" class="form-control" id="score2" name="webdscore" required>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="score3">React Final Score:</label>
-                        <input type="number" class="form-control" id="score3">
+                        <input type="number" class="form-control" id="score3" name="react_score" required>
                     </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                        Check me out
-                    </label>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            </div><br>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 
