added add interview option to save info on DB

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,11 +26,10 @@
         <%- include('home') %>
     </div>
     <div class="tab-pane fade" id="add-interview" role="tabpanel" aria-labelledby="add-interview-tab">
-        <%- include('add-interview') %>
-
+        <%- include('add_interview') %>
     </div>
     <div class="tab-pane fade" id="view-jobs" role="tabpanel" aria-labelledby="view-jobs-tab">
-        c
+        casdas
     </div>
     <div class="tab-pane fade" id="studentlist" role="tabpanel" aria-labelledby="studentlist-tab">
         <%- include('student_list') %>
