--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,9 @@
-#add_student_container{
+textarea{
+    width:100%;
+    resize: none;
+    border-radius:5px;
+}
+#add_student_container,#add_interview_container{
     background-color:#76a9f7;
     position: fixed;
     bottom: 10;
@@ -6,9 +11,22 @@
     border-radius:50%;
     font-size:30px;
     padding:10px;
+    z-index: 1;
     color: #000;
 }
-#add_student_form{
+#add_student_form,#students-interview-list{
     padding:20px;
     display:none;
+}
+#map-student-checkbox{
+    float: right;
+}
+/*show list button on add-interview*/
+#showlist{
+    width:5%;
+    background-color:#5c5ee2;
+    padding:10px;
+    cursor: pointer;
+    color:#ffffff;
+    border-radius:5px;
 }
