--- a/views/student_list.ejs
+++ b/views/student_list.ejs
@@ -2,7 +2,7 @@
     <h1> Students List</h1>
     <div class="list-group">
         <% for(student in studentData){ %>
-            <button type="button" class="list-group-item list-group-item-action">
+            <button type="button" onClick="location.href='/student/showstudent?sid=<%= studentData[student].id %>'" class="list-group-item list-group-item-action">
                 <%= studentData[student].name %>
             </button>    
         <% } %>
