--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
         <%- include('student_list') %>
     </div>
     <div class="tab-pane fade" id="login-signup" role="tabpanel" aria-labelledby="login-signup-tab">
-        e
+        <%- include('login') %>
     </div>
 
 </div>
