--- a/views/student_list.ejs
+++ b/views/student_list.ejs
@@ -1,3 +1,7 @@
+
+    <a class="active" href="/csv">Export data to csv</a>
+
+
 <div class="container-fluid" style="margin-top:100px" id="students-list">
     <h1> Students List</h1>
     <div class="list-group">
