--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,7 +14,7 @@ textarea{
     z-index: 5;
     color: #000;
 }
-#add_student_form,#add_interview_form,#students-interview-list{
+#add_student_form,#add_interview_form,#students-interview-list,#signup-form{
     padding:20px;
     display:none;
 }
