--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
                     class="img-fluid" alt="Sample image">
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form action="/login" method="POST">
+                <form action="/createSession" method="POST">
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                         <p class="lead fw-normal mb-0 me-3">Sign in with</p>
                         <button type="button" class="btn btn-primary btn-floating mx-1">
@@ -26,7 +26,7 @@
                         <p class="text-center fw-bold mx-3 mb-0">Or</p>
                     </div>
                     <!-- login form -->
-                    <form action="/login" method="POST">
+                    <!-- <form action="/createSession" method="POST"> -->
                         <!-- Email input -->
                         <div class="form-outline mb-4">
                             <input type="email" id="form3Example3" class="form-control form-control-lg"
@@ -51,7 +51,7 @@
                             <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a id="signup" href="#!"
                                     class="link-danger">Register</a></p>
                         </div>
-                    </form>
+                    <!-- </form> -->
                 </form>
             </div>
         </div>
