--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,8 @@
 <section class="vh-100" id="login-form">
     <div class="container-fluid h-custom">
+
+        <p class="text-center h1 fw-bold">Log In</p>
+       
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-md-9 col-lg-6 col-xl-5">
                 <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
@@ -41,9 +44,9 @@
                             <label class="form-label" for="form3Example4" required >Password</label>
                         </div>
 
-                        <div class="d-flex justify-content-between align-items-center">
+                        <!-- <div class="d-flex justify-content-between align-items-center">
                             <a href="#!" class="text-body">Forgot password?</a>
-                        </div>
+                        </div> -->
 
                         <div class="text-center text-lg-start mt-4 pt-2">
                             <button type="submit" class="btn btn-primary btn-lg"
