--- a/views/interview_explore.ejs
+++ b/views/interview_explore.ejs
@@ -50,7 +50,7 @@
                         <%= studentData[student].name %>
                       </span>
                       <div id="map-student-checkbox">
-                        <input type="checkbox" name="student_list" value="<%= studentData[student]._id %>" required>
+                        <input type="checkbox" name="student_list" value="<%= studentData[student]._id %>">
                       </div>
                     </div>
                   </div>
